# tokamak

./: .env  Pipfile  README.md  app.py  app2.py  app3.py  app4.py  app8.py  asynctest.py  caching.py  clock.py  demo.py  dynamic.py  heatmaptest.py  interval.py  metadata.json  plotlytest.py  ptpython_async.py  pyproject.toml  requirements.txt  run.py  setup.py  start_repl.py  timer.py  todo.py  todo2.py  wtf.py
apps/InterferenceGenerator/: parameters.py  utils.py
assets/: clientside.js  style.css  todo.css  utils.js
default_namespace/: A.py  MyComponent.py  _imports_.py
lib/: sess_ids.pkl  sess_info.pkl
src/interference/: models.py  parameters.py  utils.py
src/tokamak/: asyncmodels.py  base_component_override.py  install.py  models.py  models2.py  scratch.py  utils.py
src/tokamak.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tokamak2.egg-info/: PKG-INFO  SOURCES.txt
src/venvs.tokamak.lib.python3.7.distutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tokamak/: DocumentTitle.react.js  base_component_override.py  clock.py  install.py  models.py  parameters.py  scratch.py  utils.py
venvs/tokamak-id8SqgHM/: .project
venvs/tokamak-id8SqgHM/include/: python3.7m
venvs/tokamak-id8SqgHM/lib/python3.7/: LICENSE.txt  __future__.py  _bootlocale.py  _collections_abc.py  _dummy_thread.py  _weakrefset.py  abc.py  base64.py  bisect.py  codecs.py  collections  config-3.7m-x86_64-linux-gnu  copy.py  copyreg.py  encodings  enum.py  fnmatch.py  functools.py  genericpath.py  hashlib.py  heapq.py  hmac.py  io.py  (+28 more)
venvs/tokamak/include/: python3.7m
(+51 files in other folders)
